# slambook

./: .gitignore  README.md
ch10/sphere/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp
ch11/bag_of_words/: CMakeLists.txt  feature_training.cpp  loop_closure.cpp
ch12/: CMakeLists.txt
ch12/dense_RGBD/: CMakeLists.txt  octomap_mapping.cpp
ch12/dense_mono/: CMakeLists.txt  dense_mapping.cpp
ch13/: CMakeLists.txt
ch13/app/: run_kitti_stereo.cpp
ch13/config/: default.yaml
ch13/include/myslam/: algorithm.h  common_include.h  config.h  feature.h  frame.h  frontend.h  g2o_types.h  map.h  mappoint.h  viewer.h  visual_odometry.h
ch13/src/: backend.cpp  config.cpp  dataset.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp
ch13/test/: CMakeLists.txt
ch2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  helloSLAM.cpp  libHelloSLAM.cpp
ch3/examples/: CMakeLists.txt  plotTrajectory.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  coordinateTransform.cpp  useGeometry.cpp
ch4/example/: CMakeLists.txt  e.txt  estimated_out.txt  gps.txt  gps_out.txt  trajectoryError.cpp
ch4/useSophus/: CMakeLists.txt  useSophus.cpp
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
ch5/rgbd/: CMakeLists.txt  jointMap.cpp
ch5/stereoVision/: CMakeLists.txt  stereoVision.cpp
ch6/: CMakeLists.txt
ch6/ceres_google/: CMakeLists.txt  ceresCurveFitting.cpp
ch6/g2o/: CMakeLists.txt  g2oCurveFitting.cpp
ch6/guassNewton/: CMakeLists.txt  guassNewton.cpp
ch7/IPC/: CMakeLists.txt  pose_estimation_3d3d.cpp
ch7/ORB/: CMakeLists.txt  orb_cv.cpp
ch7/camera_motion/: CMakeLists.txt  pose_estimation_2d2d.cpp
ch7/pnp/: CMakeLists.txt  pose_estimation_3d2d.cpp
ch7/triangulation/: CMakeLists.txt  triangulation.cpp
ch8/direct/: CMakeLists.txt  direct_method.cpp
ch8/opticalflow/: CMakeLists.txt  opticalflow.cpp
ch9/: CMakeLists.txt  bundle_adjustment_g2o.cpp  bundleadjustmentg2o.cpp
ch9/ceres/: CMakeLists.txt
