cmake_minimum_required(VERSION 2.8)

project(bundle_adjustment)
set(CMAKE_CXX_FLAGS "-O3 -std=c++17")

LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

Find_Package(g2o REQUIRED)
Find_Package(Eigen3 REQUIRED)
Find_Package(Ceres REQUIRED)
Find_Package(Sophus REQUIRED)
# Find_Package(CSparse REQUIRED)

# SET(G2O_LIBS g2o_csparse_extension g2o_stuff g2o_core cxsparse)

include_directories(${PROJECT_SOURCE_DIR} ${EIGEN3_INCLUDE_DIR} ${CSPARSE_INCLUDE_DIR})
message("hello, ${CSPARSE_INCLUDE_DIR}")

add_library(bal_common common.cpp)
add_executable(bundle_adjustment_g2o bundle_adjustment_g2o.cpp)
add_executable(bundle_adjustment_ceres bundle_adjustment_ceres.cpp)

target_link_libraries(bundle_adjustment_ceres ${CERES_LIBRARIES} bal_common)
# target_link_libraries(bundle_adjustment_g2o ${G2O_LIBS} bal_common Sophus::Sophus)
target_link_libraries(bundle_adjustment_g2o 
Eigen3::Eigen
Sophus::Sophus
g2o::core
g2o::solver_csparse
bal_common)